<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <TextView
        android:id="@+id/tv_profile"
        style="@style/TextAppearance.AppTheme.account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textAlignment="center" />

    <RelativeLayout
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_account_circle_20" />

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/img_profile"
            android:text="@string/hello"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.AppTheme.account.text"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_below="@+id/textHello"
            android:layout_marginStart="31dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/img_profile"
            android:text="@string/name" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail"
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username"
                style="@style/TextAppearance.AppTheme.account.text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/akun_name"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="29dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="164dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#00FF0000"
                android:src="@drawable/ic_baseline_edit_24"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnEdit"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/update"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/email"
                style="@style/TextAppearance.AppTheme.account.text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginTop="0dp"
                android:text="@string/akun_email"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logout"
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_logout"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_login_24" />

            <TextView
                android:id="@+id/txtLogout"
                style="@style/TextAppearance.AppTheme.detail.text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:text="@string/logout"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>